# ut

./: README.md  pyproject.toml
.github/workflows/: uniqlo-price-watch.yml
scripts/: __init__.py  uniqlo_price_watch.py
state/: uniqlo_ut_l_alerted.json
tests/: test_uniqlo_price_watch.py
tests/fixtures/: uniqlo_search_page_1.json  uniqlo_search_page_2.json
